# sosml

./: .gitignore  .ocamlformat  Makefile  dune-project  sosml.opam
examples/: tender.sos
lib/: .merlin  dune  operation.ml  parser.ml  parser.mli  protocol.ml  service.ml  sosml.ml  stores.ml  structure.ml  structures.ml  version.ml
lib_csp/: act.ml  cons.ml  dune  map.ml  proc.ml  sort.ml
test/: .merlin  dune  operation_test.ml  service_test.ml  sosml.ml  sosml_test.ml  version_test.ml
